<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/lineFunc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/lineFunc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/spinnerItems" />

        <EditText
            android:id="@+id/FindTreiner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trainer"
            android:paddingTop="0px"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/lvData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lineFunc">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/workout"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/trainer"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lineHeader"
        tools:ignore="UsingOnClickInXml" />

    <android.widget.Button
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="100dp"
        android:text="@string/addData"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/style_button"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lvData" />

</androidx.constraintlayout.widget.ConstraintLayout>